--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="/home/rohan/Downloads/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="/home/rohan/Downloads/retrofit-1.5.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
